--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Three.JS-Webpack Boilerplate</title>
   </head>
   <body>
+    <canvas id="three"></canvas>
     <script src="public/bundle.js"></script>
   </body>
 </html>
