--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body>
     <!-- <canvas id="three"></canvas> -->
     <script src="public/bundle.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   </body>
 </html>
