--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <main class="site-main">
+  <!-- <main class="site-main">
     <img class="header" src="../img/header.png" alt="">
 
     <div class="threejs-container">
@@ -39,7 +39,7 @@
     <section class="section-five">
       <img class="t4" src="../img/t4.png" alt="">
     </section>
-  </main>
+  </main> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
   <script src="public/bundle.js"></script>
